Update: リポジトリの解説をgame sandboxへ変更 すごろくを設置する場所を手配 #1

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-ts-liff",
-  "description": "LIFFアプリケーションを開発するプロジェクトのサンプル",
-  "version": "2.0.0",
+  "name": "game-sandbox",
+  "description": "ゲームのプロトタイプを作る場所",
+  "version": "0.1.0",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git@github.com:webdev-jp-net/react-ts-liff.git"
+    "url": "git@github.com:webdev-jp-net/game-sandbox.git"
   },
   "author": "webdev",
   "license": "UNLICENSED",
