--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "LIFFセット",
-  "name": "LIFFアプリ開発セット",
+  "short_name": "Game Sandbox",
+  "name": "Game Sandbox",
   "icons": [
     {
       "src": "favicon.ico",
