--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "three": "^0.164.1",
     "vite-plugin-pwa": "^0.17.4"
   },
   "devDependencies": {
@@ -73,6 +74,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.164.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.4",
